Project marketplace {
  database_type: 'PostgreSQL'
}

/*****************************************************************************************
*                                   Fiscal information                                   *
*****************************************************************************************/

Table taxes {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    sat_code varchar(8) [not null]
    base decimal(12,6) [not null, Note: 'Amount to apply the tax, if quota is true, this is the quota amount, if false, this is the percentage to be calculated']
    retention bool [default:false]
    quota bool [default:false]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null] 
    is_deleted bool [default: false]

    Note: 'Providers taxes'
}

table sat_classes {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    clave varchar(94) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]

    Note: 'SAT products and services classification codes'
}

/*****************************************************************************************
*                                        Catalogs                                        *
*****************************************************************************************/

// Product status
Table product_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}


// Provider status
Table provider_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}


// Variant status
Table variant_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

// Order status
Table order_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

// Client tatus
Table client_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

// Meassurment units
Table measurement_units {
    id UUID [pk, default: `uuid_generate_v4()`]
    _id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    name varchar(94) [not null]
    code varchar(64) [not null]
    sat_code varchar(64) [null, Note: 'SAT meassurment unit code']
    magnitude varchar(24) [not null]
    value decimal(15,7) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    //indexes
    indexes{
      (_id)[unique]
    }
}

// Countries
Table countries {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(100) [not null]
    code varchar(2) [not null, Note: 'ISO 3166-1 alpha-2 code']
    icon varchar(64) [null, Note: 'Country flag icon']
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

// Fiscal regimes
Table fiscal_regimes {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    sat_id varchar(8) [not null, Note: 'SAT fiscal regime code']
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

// Variant tags
Table variant_tags {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

// Brands
Table Brands {
    id UUID [pk, default: `uuid_generate_v4()`]
    Name varchar(128) [null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
}

/*****************************************************************************************
*                                        Products                                        *
*****************************************************************************************/
// Dapartments
Table departments {
    id UUID [pk, default: `uuid_generate_v4()`]
    _id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    name varchar(94) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    //indexes
    indexes{
      (_id)[unique]
    }
}

// sections
Table sections {
    id UUID [pk, default: `uuid_generate_v4()`]
    _id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    name varchar(94) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    department_id UUID [ref: > departments.id]
    //indexes
    indexes{
      (_id)[unique]
    }
}

// Products
Table products {
    id UUID [pk, default: `uuid_generate_v4()`]
    _id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    name varchar(94) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    section_id UUID [ref: > sections.id]
    status_id UUID [ref: > product_status.id]
    class_id UUID [ref: > sat_classes.id]
    display_unit_id UUID [ref: > measurement_units.id]
    //indexes
    indexes{
      (_id)[unique]
    }
}

// Product fill directions
Table product_fill_directions {
    id UUID [pk, default: `uuid_generate_v4()`]
    directions varchar [not null]
    // relations
    product_id UUID [ref: > products.id]
}

// Product averages
Table products_averages {
    id UUID [pk, default: `uuid_generate_v4()`]
    price varchar(94) [not null] // Precio promedio de las variantes que pertenecen este producto
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    unit_id UUID [ref: > measurement_units.id] // Media de la unidad utilizada en las variantes para este producto
    product_id UUID [ref: > products.id]
}

// Product taxes
Table variant_taxes {
    id UUID [pk, default: `uuid_generate_v4()`]
    is_deleted bool [default: false]
    // relations
    product_id UUID [ref: > products.id]
    tax_id UUID [ref: > taxes.id]
}


/*****************************************************************************************
*                                     Providers data                                     *
*****************************************************************************************/

// Tax information
Table provider_tax_information {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(255) [not null]
    tax_id varchar(13) [not null, Note: 'RFC']
    private_key_pass varchar(255) [not null] // Consultar las opcions de seguridad
    
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    fiscal_regime_id UUID [ref: > fiscal_regimes.id]
    provider_id UUID [ref: > providers.id]
}

// Provider information
Table providers {
    id UUID [pk, default: `uuid_generate_v4()`]
    _id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    name varchar(128) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    status_id UUID [ref: > provider_status.id]
    //indexes
    indexes{
      (_id)[unique]
    }
}

// Variant information
Table variants {
    id UUID [pk, default: `uuid_generate_v4()`]
    _id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    external_id varchar(24) [null, Note: 'Queda como legacy, sedeberá elimnar cuando ya no se use mongoDB']
    description varchar(255) [null]
    content decimal(12,6) [not null]
    in_stock bool [default: true, Note: 'Indica si el proveedor tiene producto en stock']
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    content_unit_id UUID [ref: > measurement_units.id]
    status_id UUID [ref: > variant_status.id]
    provider_id UUID [ref: > providers.id]
    country_id UUID [ref: > countries.id]
    product_id UUID [ref: > products.id]
    brand_id UUID [ref: > brands.id]
    //indexes
    indexes{
      (_id)[unique]
    }
}
Ref: variants.id <> variant_tags.id

// Variant prices (History)
Table variant_prices {
    id UUID [pk, default: `uuid_generate_v4()`]
    price decimal(12,6) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    variant_id UUID [ref: > variants.id]
}

/*****************************************************************************************
*                                       Orders data                                      *
*****************************************************************************************/

// Orders
Table orders {
    id UUID [pk, default: `uuid_generate_v4()`]
    identifier varchar(8) [not null,Note: 'Template: YYMMXXXX']
    commission decimal(12,9) [not null]

    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    client_id UUID [ref: > clients.id]
    provider_id UUID [ref: > providers.id]
    delivery_adress_id UUID [ref: > client_delivery_addresses.id]
    // indexes
    uuid_index varchar(8) [unique]
}

// Order items
Table order_items {
    id UUID [pk, default: `uuid_generate_v4()`]
    quantity decimal(12,6) [not null]
    price decimal(12,6) [not null]

    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    order_id UUID [ref: > orders.id]
    variant_id UUID [ref: > variants.id]
}

// Order status history
Table order_status_history {
    id UUID [pk, default: `uuid_generate_v4()`]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    order_id UUID [ref: > orders.id]
    status_id UUID [ref: > order_status.id]
    // agregar a quién modificó???
}

/*****************************************************************************************
*                                      Clients data                                      *
*****************************************************************************************/

// Clients tax information
Table client_tax_information {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(255) [not null]
    rfc varchar(13) [not null, Note: 'RFC']
    adress varchar(512) [not null]
    
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    client_id UUID [ref: > providers.id]
    fiscal_regime_id UUID [ref: > fiscal_regimes.id]
    Note: 'Client tax information'
}

// Clients information
Table clients {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(128) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    status_id UUID [ref: > client_status.id]
}

// Clients addresses
Table client_delivery_addresses {
    id UUID [pk, default: `uuid_generate_v4()`]
    street varchar(128) [not null]
    exterior varchar(64) [not null]
    interior varchar(64) [not null]
    neighborhood varchar(128) [not null]
    city varchar(128) [not null]
    state varchar(128) [not null]
    zip varchar(32) [not null]
    comments varchar(512) [not null]
    schedule varchar(64) [not null]
    created_at timetz [default: `now()`]
    updated_at timetz [default: `now()`]
    deleted_at timetz [null]
    is_deleted bool [default: false]
    // relations
    client_id UUID [ref: > clients.id]
    country_id UUID [ref: > countries.id]
}
